assets/css/style.css
/* ... */
input::-moz-placeholder {
    color: #5a5a5a;
}

input:-ms-input-placeholder {
    color: #5a5a5a;
}

input::placeholder {
    color: #5a5a5a;
}
input::-webkit-input-placeholder {
    color: #5a5a5a;
}
input::-moz-placeholder {
    color: #5a5a5a;
}
input::-ms-input-placeholder {
    color: #5a5a5a;
}
textarea::-webkit-input-placeholder{
    color: #5a5a5a;
    padding: 5px;
}
textarea::-moz-input-placeholder{
    color: #5a5a5a;
    padding: 5px;
}
textarea::-ms-input-placeholder{
    color: #5a5a5a;
    padding: 5px;
}

/*for image bg*/
/*.img-bg{
  background: url(../images/home-msg.jpg) no-repeat center top fixed;
  background-size
  -moz-background-size: cover;
  -webkit-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  width: 100%;
  overflow: hidden;
}*/


.transform_scal_rotate:hover img{ 
    -webkit-transform: scale(1.1) rotate(4deg); 
    transform: scale(1.1) rotate(4deg); 
}

.culmn{
    width:100%;
    overflow: hidden;
}
.fix{
    overflow: hidden;
}
/*heading title all area*/
.head_title{
    padding-bottom: 2.143rem;
    overflow: hidden;
}
.head_title h1{
    font-family: 'Oswald';
    font-weight: 400;
    letter-spacing: 5px;
    font-size:3.5rem;
    color:#16293b;
}
.head_title h2{
    font-weight: 400;
    font-size: 2rem;
    font-family: 'Oswald';
    color: #16293b;
    letter-spacing: 8px;
    border-bottom: 5px solid #fed4d6;
    display: inline-block;
}
.head_title h2 strong{
    font-weight: 700;
}
.head_title h3{
    font-family: Montserrat;
    font-weight: 500;
    font-size:1.75rem;

}
.head_title h5{
    font-weight: 400;
    font-size:1.125rem;
    color:#999999;
}

/*End off pridifain css*/



/*Preloader*/
#loading{
    background-color: #fed4d6;
    height: 100%;
    width: 100%;
    position: absolute;
    z-index: 1;
    margin-top: 0px;
    top: 0px;
    left:0;
    z-index: 9999;
}
#loading-center{
    width: 100%;
    height: 100%;
    position: relative;
}
#loading-center-absolute {
    position: absolute;
    left: 50%;
    top: 50%;
    height: 50px;
    width: 50px;
    margin-top: -25px;
    margin-left: -25px;
    -ms-transform: rotate(45deg); 
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg); 
    -webkit-animation: loading-center-absolute 1.5s infinite;
    animation: loading-center-absolute 1.5s infinite;

}
.object{
    width: 25px;
    height: 25px;
    background-color: #FFF;
    float: left;

}


#object_one {
    -webkit-animation: object_one 1.5s infinite;
    animation: object_one 1.5s infinite;
}
#object_two {
    -webkit-animation: object_two 1.5s infinite;
    animation: object_two 1.5s infinite;
}
#object_three {
    -webkit-animation: object_three 1.5s infinite;
    animation: object_three 1.5s infinite;
}
#object_four {
    -webkit-animation: object_four 1.5s infinite;
    animation: object_four 1.5s infinite;
}


@-webkit-keyframes loading-center-absolute {
    100% { -webkit-transform: rotate(-45deg); }

}

@keyframes loading-center-absolute {
    100% { 
        transform:  rotate(-45deg);
        -webkit-transform:  rotate(-45deg);
    }
}



@-webkit-keyframes object_one {
    25% { -webkit-transform: translate(0,-50px) rotate(-180deg); }
    100% { -webkit-transform: translate(0,0) rotate(-180deg); }

}

@keyframes object_one {
    25% { 
        transform: translate(0,-50px) rotate(-180deg);
        -webkit-transform: translate(0,-50px) rotate(-180deg);
    } 
    100% { 
        transform: translate(0,0) rotate(-180deg);
        -webkit-transform: translate(0,0) rotate(-180deg);
    }
}


@-webkit-keyframes object_two {
    25% { -webkit-transform: translate(50px,0) rotate(-180deg); }
    100% { -webkit-transform: translate(0,0) rotate(-180deg); }
}

@keyframes object_two {
    25% { 
        transform: translate(50px,0) rotate(-180deg);
        -webkit-transform: translate(50px,0) rotate(-180deg);
    } 
    100% { 
        transform: translate(0,0) rotate(-180deg);
        -webkit-transform: translate(0,0) rotate(-180deg);
    }
}

@-webkit-keyframes object_three {
    25% { -webkit-transform: translate(-50px,0) rotate(-180deg); }
    100% { -webkit-transform: translate(0,0) rotate(-180deg); }
}

@keyframes object_three {
    25% { 
        transform:  translate(-50px,0) rotate(-180deg);
        -webkit-transform:  translate(-50px,0) rotate(-180deg);
    } 
    100% { 
        transform: translate(0,0) rotate(-180deg);
        -webkit-transform: rtranslate(0,0) rotate(-180deg);
    }
}


@-webkit-keyframes object_four {
    25% { -webkit-transform: translate(0,50px) rotate(-180deg); }
    100% { -webkit-transform: translate(0,0) rotate(-180deg); }
}

@keyframes object_four {
    25% { 
        transform: translate(0,50px) rotate(-180deg); 
        -webkit-transform: translate(0,50px) rotate(-180deg);  
    } 
    100% { 
        transform: translate(0,0) rotate(-180deg);
        -webkit-transform: translate(0,0) rotate(-180deg);
    }
}
/*End off Preloader*/


/*
Nav Menu style
==================*/

.navbar-brand {
    padding: 15px 30px;
}
.navbar-header {
    padding: 15px 30px;

}
nav.navbar.bootsnav ul.nav li.active > a{
    color:#fed4d6;
}
nav.navbar.bootsnav.no-background.white ul.nav > li > a {
    color: #fff;
}
nav.navbar.bootsnav.no-background.white ul.nav > li.active > a {
    color: #fed4d6;
}

/*
Home Section style
==================*/

.home{
    background: url(../images/lake.jpg) no-repeat top center;
    background-size: cover;
    position: relative;
    padding-top: 220px;
    padding-bottom: 220px;
    width:100%;
}
.home_text h1{
    font-size:100px;
    font-family: 'Oswald';
    letter-spacing: 5px;
    margin-bottom:20px;
    line-height: 105px;
}
.home_text h3{
    font-size:24px;
    font-family: 'Montserrat', sans-serif;

}

.home_text h4{
    font-size:18px;
    font-family: 'Montserrat', serif;
}
.home_text h5{
    font-size:60px;
    font-family: 'Kaushan Script';
}
/* ... */

